--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
 [build]
   command = "node index.js"
-  functions = "functions"
+  
 
-
-  [[headers]]
-for = "/*"
-[headers.values]
-Access-Control-Allow-Origin = "*"
+[[redirects]]
+  from = "/send-email"
+  to = "/.netlify/functions/send-email"
+  status = 200
